--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "acacha/admin-lte-template-laravel": "^2.0"
+        "acacha/admin-lte-template-laravel": "^2.0",
+        "prettus/l5-repository": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
