--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "acacha/admin-lte-template-laravel": "^2.0",
-        "prettus/l5-repository": "^2.5"
+        "prettus/l5-repository": "^2.5",
+        "propaganistas/laravel-phone": "^2.7",
+        "league/fractal": "^0.13.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
