--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "acacha/admin-lte-template-laravel": "^2.0",
         "prettus/l5-repository": "^2.5",
         "propaganistas/laravel-phone": "^2.7",
-        "league/fractal": "^0.13.0"
+        "league/fractal": "^0.13.0",
+        "hackzilla/password-generator": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
