--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "propaganistas/laravel-phone": "^2.7",
         "league/fractal": "^0.13.0",
         "hackzilla/password-generator": "^1.1",
-        "league/csv": "^8.0"
+        "league/csv": "^8.0",
+        "lbhurtado/simple-txtcmdr-drivers": "^0.1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -24,7 +25,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "vendor/telerivet/telerivet-php-client/telerivet.php"
         ],
         "psr-4": {
             "App\\": "app/"
