--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "league/fractal": "^0.13.0",
         "hackzilla/password-generator": "^1.1",
         "league/csv": "^8.0",
-        "lbhurtado/simple-txtcmdr-drivers": "^0.1.0"
+        "lbhurtado/simple-txtcmdr-drivers": "^0.1.0",
+        "pda/pheanstalk": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
