--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "hackzilla/password-generator": "^1.1",
         "league/csv": "^8.0",
         "lbhurtado/simple-txtcmdr-drivers": "^0.1.0",
-        "pda/pheanstalk": "^3.1"
+        "pda/pheanstalk": "^3.1",
+        "iron-io/iron_mq": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
